# R-Type

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  main.cpp
client/: client.cmake  main_client.cpp
cmake/find/: FindSFML.cmake
core/: core.cmake
demo dlopen/: hello.cpp  main_class.cpp  main_func.cpp  polygon.hpp  triangle.cpp
enemies/: Enemy.cpp  Enemy.hpp  IEnemy.hpp  main.cpp
engine/core/: ASystem.hpp  AutoList.hpp  BusNode.cpp  BusNode.hpp  Component.cpp  Component.hpp  ComponentHandler.hpp  Engine.cpp  Engine.hpp  EngineMsg.cpp  EngineMsg.hpp  GameObject.cpp  GameObject.hpp  GameObjectManager.hpp  ID.hpp  ISystem.hpp  InputSystem.cpp  InputSystem.hpp  Message.cpp  Message.hpp  MessageBus.cpp  MessageBus.hpp  NonCopyable.hpp  Scene.cpp  Scene.hpp  Singleton.hpp  Vector2D.cpp  Vector2D.hpp
engine/game/: GameLogicSystem.cpp  GameLogicSystem.hpp  game.cmake
engine/graphics/: Animation.cpp  Animation.hpp  Event.cpp  Event.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  GraphicsComponent.cpp  GraphicsComponent.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  Orientation.cpp  Orientation.hpp  Position.cpp  Position.hpp  RTypeGraphics.hpp  Scene.cpp  Scene.hpp  SpriteComponent.cpp  SpriteComponent.hpp  SpriteSheet.cpp  SpriteSheet.hpp  Window.cpp  Window.hpp  graphics.cmake  graphics.md  testMain.cpp
engine/input/: Command.hpp  InputComponent.cpp  InputComponent.hpp  InputSystem.cpp  InputSystem.hpp
engine/network/: ISocket.hpp  NetworkComponent.cpp  NetworkComponent.hpp  Socket.cpp  Socket.hpp  UnixSocket.cpp  UnixSocket.hpp  WindowsSocket.cpp  WindowsSocket.hpp  network.cmake  network.md  networkException.hpp
engine/physics/: Box.cpp  Box.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RigidBodyComponent.cpp  RigidBodyComponent.hpp  Vector2D.cpp  Vector2D.hpp  physics.cmake
engine/projectile/: BulletComponent.cpp  BulletComponent.hpp  BulletSystem.cpp  BulletSystem.hpp
game/: BulletComponent.cpp  BulletComponent.hpp  BulletSystem.cpp  BulletSystem.hpp  ClientCreatePlayer.cpp  ClientCreatePlayer.hpp  GameClient.cpp  GameClient.hpp  GameLogicClientSystem.cpp  GameLogicClientSystem.hpp  GameLogicSystem.cpp  GameLogicSystem.hpp  GameServer.cpp  GameServer.hpp  Message.hpp  Player.cpp  Player.hpp  PlayerComponent.cpp  PlayerComponent.hpp  ServerCreatePlayer.cpp  ServerCreatePlayer.hpp  SpaceShip.cpp  SpaceShip.hpp  Type.hpp  UserType.hpp
launcher/: Connection.cpp  Connection.hpp  GraphicalRoom.cpp  GraphicalRoom.hpp  Helper.cpp  Helper.hpp  Lobby.cpp  Lobby.hpp  MatchMaking.cpp  MatchMaking.hpp  Menu.cpp  Menu.hpp  Room.cpp  Room.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  ServerList.cpp  ServerList.hpp  Settings.cpp  Settings.hpp  main.cpp
launcher/assets/: Menu.psd  bg.psd  serverList.psd
server/: GameManager.cpp  GameManager.hpp  Player.cpp  Player.hpp  Room.cpp  Room.hpp  Server.cpp  Server.hpp  Socket.cpp  Socket.hpp  main_server.cpp  server.cmake
server/include/: Exception.hpp  GameManager.hpp  ISocket.hpp  Player.hpp  Room.hpp  Server.hpp  Socket.hpp  UnixSocket.hpp  WindowsSocket.hpp
server/src/: GameManager.cpp  Player.cpp  Room.cpp  Server.cpp  Socket.cpp  UnixSocket.cpp  WindowsSocket.cpp
unit/engine/core/: GameObjectManagerUnit.cpp  GameObjectUnit.cpp
unit/engine/graphics/: GraphicsComponentUnit.cpp  GraphicsSystemUnit.cpp
unit/engine/physics/: PhysicsSystemUnit.cpp  RigidBodyComponentUnit.cpp
unit/engine/projectile/: BulletSystemUnit.cpp
unit/game/: GamePlayerUnit.cpp
